Disable IPv6 autoconf for eth0 (conflicts with gphy)
Both eth0 and gphy ended-up with the same IPv6 address, which caused
problems with NetworkInterface.getByInetAddress()

This might cause problem on platforms where gphy is not present (eth0
is the real Ethernet interface).

refs #SWANDROID-1072

Change-Id: Id7485b02c189118c71c45cc609d4552655ab45b1

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -23,6 +23,9 @@ on init
    export NEXUS_DEVICE_NODE /dev/mali
    export NEXUS_WAKE_DEVICE_NODE /dev/mali0
 
+   # Do not let SYSTEMPORT get an IPv6 address (when using gphy)
+   write /proc/sys/net/ipv6/conf/eth0/disable_ipv6 1
+
 on fs
    mount_all /fstab.bcm_platform
    setprop ro.crypto.fuse_sdcard true
