hwc: hwcbinder service hookup (i).
the hwcbinder service is used for omx/hwc purposes
to exchange information about playback and control
the display of frames as requested by the composer.

this initial delivery introduces the service and the
hook up with the hwc side of things.

refs #SWANDROID-1266

Change-Id: Ia28b1f8459146d8b7226ea207019d47efb152d60
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -70,6 +70,8 @@ on post-fs-data
    chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
    chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
 
+   class_start pre_core
+
 on property:hw.nexus.platforminit=on
    class_start main
 
@@ -115,3 +117,9 @@ service pmlibservice /system/bin/pmlibserver
     group root
     critical
 
+service hwcbinder /system/bin/hwcbinder
+   class pre_core
+   user root
+   group system media
+   critical
+   oneshot
