DHD: fixed FW loading issue on 43569a2
Use bcmdl to load FW and set system property to OK if loading
is success.

Note that: add  2s delay before set system property to OK. otherwise,
The dongle will get into a unrecoverable state if connect to the WLAN0
interface too soon.

refs #SWANDROID-1272

Change-Id: Ie298ff19e7ba9e4ed6b1032843480d3524d03e94
Signed-off-by: Charley Chu <charley.chu@broadcom.com>

--- a/bcm_platform/brcm_dhd/init.brcm_dhd.rc
+++ b/bcm_platform/brcm_dhd/init.brcm_dhd.rc
@@ -1,15 +1,3 @@
-on init
-
-# WiFi
-    chown root root /system/vendor/broadcom/dhd/driver/bcmdhd.ko
-    chmod 0744 /system/vendor/broadcom/dhd/driver/bcmdhd.ko
-    insmod /system/vendor/broadcom/dhd/driver/bcmdhd.ko
-
-# Bring up wifi first before wpa supplicant
-service dhd_fwload /system/bin/bcmdl -n /system/vendor/broadcom/dhd/nvrams/nvm.txt /system/vendor/broadcom/dhd/firmware/fw.bin.trx
-    class core
-    oneshot
-
 on post-fs-data
 # give system access to wpa_supplicant.conf for backup and restore
     mkdir /system/etc/wifi 0777 wifi wifi 
@@ -41,6 +29,11 @@ on post-fs-data
 
     setprop wifi.interface wlan0
     setprop wlan.driver.status "ok" 
+
+service dhd_fwload /system/bin/bcmdl -n /system/vendor/broadcom/dhd/nvrams/nvm.txt /system/vendor/broadcom/dhd/firmware/fw.bin.trx
+    class core
+    disabled
+    oneshot
 
 
 on boot
