--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -99,3 +99,10 @@ service disable-sleep /system/bin/logwrapper /system/bin/svc power stayon true
 service drop-cache /system/etc/cache.sh
    class main
    oneshot
+
+service pmlibservice /system/bin/pmlibserver
+    class core
+    user root
+    group root
+    critical
+
