init: Add debugfs mount
Point debugfs to /sys/kernel/debug where Android is expecting it to be
located.  debugfs is required for supporting Android systrace tool.

refs #SWANDROID-1371

Change-Id: I514e481a1481b0553ddf0c119497159f8a50d4e5

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -26,6 +26,9 @@ on init
    # Do not let SYSTEMPORT get an IPv6 address (when using gphy)
    write /proc/sys/net/ipv6/conf/eth0/disable_ipv6 1
 
+   # Mount kernel debugfs
+   mount debugfs none /sys/kernel/debug
+
 on fs
    mount_all /fstab.bcm_platform
    setprop ro.crypto.fuse_sdcard true
