Create symbolic names for Android partitions
Migrate to standard way to making symbolic links for Android partitions.
Remove all references to partlink in init files.

refs #SWANDROID-1298

Change-Id: I26600127ec0378771ef3c20705317f1660ab0bef

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -3,6 +3,7 @@ import /init.brcm_dhd.rc
 import /init.brcm_wl.rc
 import /init.brcm_bt.rc
 import /init.nfs.rc
+import /init.blockdev.rc
 
 on init
    mkdir /mnt/shell/emulated 0700 shell shell
