--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -5,19 +5,22 @@ import /init.brcm_bt.rc
 import /init.nfs.rc
 
 on init
-   mkdir /mnt/media_rw/sdcard 0700 media_rw media_rw
+   mkdir /mnt/shell/emulated 0700 shell shell
+   mkdir /storage/emulated 0555 root root
 
-   mkdir /storage/emulated/ 0555 root root
-   mkdir /storage/sdcard 0700 root root
-   mkdir /storage/usbdisk0 0700 root root
+   mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
+   mkdir /storage/sdcard1 0700 root root
 
-   symlink /storage/sdcard /sdcard
-   symlink /storage/sdcard /mnt/sdcard
-   symlink /storage/sdcard /storage/sdcard0
-   symlink /storage/usbdisk0 /usbdisk0
-   symlink /storage/usbdisk0 /mnt/usbdisk0
+   export EXTERNAL_STORAGE /storage/emulated/legacy
+   export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
+   export EMULATED_STORAGE_TARGET /storage/emulated
+   export SECONDARY_STORAGE /storage/sdcard1
 
-   export EXTERNAL_STORAGE /storage/sdcard
+   # Support legacy paths
+   symlink /storage/emulated/legacy /sdcard
+   symlink /storage/emulated/legacy /mnt/sdcard
+   symlink /storage/emulated/legacy /storage/sdcard0
+   symlink /mnt/shell/emulated/0 /storage/emulated/legacy
 
    # allocate node(s) which are part of the CTS exception list.
    export NEXUS_DEVICE_NODE /dev/mali
@@ -72,9 +75,12 @@ on property:hw.nexus.platforminit=on
 
 # When boot has completed we can start any relevant services
 on property:sys.boot_completed=1
-    class_start boot_complete
+   class_start boot_complete
 
-service fuse_sdcard /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard /storage/sdcard
+service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
+   class late_start
+
+service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
    class late_start
    disabled
 
