BcmTVInput: Added program update from DTVKit
refs #SWANDROID-1361

Change-Id: Ibb74b4e40f2eff7c4b947eed65fa5262f9413de2

--- a/bcm_platform/app/BcmTVInput/proguard.cfg
+++ b/bcm_platform/app/BcmTVInput/proguard.cfg
@@ -1,1 +1,3 @@
 -keep class com.broadcom.tvinput.ChannelInfo { <init>(...); }
+-keep class com.broadcom.tvinput.ProgramInfo { <init>(...); }
+-keep class com.broadcom.tvinput.TunerService { void onBroadcastEvent(...); }
