[L] Enable HDCP over HDMI on Android
* Add binary DRM files with HDCP 1.x and 2.x key sets when starting nxserver
  (starting from refsw URSR 14.4, nxserver reads keys from binary DRM files);

* Always build libsecurity to make sure libsrai and Sage binaries are handled
  correctly;

* Fixed libsecurity/Android.mk so that if does not cause build failure if
  Widevine is NOT enabled;

* Minor fixes (nexusinit log tag, nexusnxservice HDCP log severity).

refs #SWANDROID-1032

Change-Id: Iaf0edaf523d0d473f9820b64160955fbb29ea188

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -58,6 +58,9 @@ on post-fs
 
    export SAGEBIN_PATH /system/bin
 
+   setprop ro.nexus.nxserver.hdcp1x_keys /system/bin/drm_hdcp1x.bin
+   setprop ro.nexus.nxserver.hdcp2x_keys /system/bin/drm_hdcp2x.bin
+
    # Eliminate writable file in /sys to pass android.permission CTS
    chmod 0664 /sys/kernel/wakeup_reasons/last_resume_reason
 
