selinux: renamed service alias.
refs #SWANDROID-888

Change-Id: I9831cc454bc444e0ba1fae11f7f4a04f8b2cd456
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -96,7 +96,7 @@ service dhcpcd_gphy /system/bin/dhcpcd -dABKL
    disabled
    oneshot
 
-service bcm-setup /system/bin/nexusinit
+service bcmsetup /system/bin/nexusinit
    class core
    user root
    group system
