BcmTVInput: Transfer detailed ScanInfo to settings app
refs #SWANDROID-1361

Change-Id: I8a3313d8f2ed30e62808f90bb281f303c2244b76

--- a/bcm_platform/app/BcmTVInput/proguard.cfg
+++ b/bcm_platform/app/BcmTVInput/proguard.cfg
@@ -1,3 +1,4 @@
 -keep class com.broadcom.tvinput.ChannelInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ProgramInfo { <init>(...); }
+-keep class com.broadcom.tvinput.ScanInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TunerService { void onBroadcastEvent(...); }
