--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -1,4 +1,5 @@
 # import other bcm_platform specific init.
+import /init.bcm_platform.usb.rc
 import /init.brcm_dhd.rc
 import /init.brcm_wl.rc
 import /init.brcm_bt.rc
@@ -68,11 +69,6 @@ on post-fs-data
    mkdir /data/media 0770 media_rw media_rw
    mkdir /data/misc/moca 0777 system system
    mkdir /data/nexus 0775 root system
-
-   chown system system /sys/class/android_usb/android0/f_mass_storage/lun/file
-   chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun/file
-   chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
-   chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
 
    class_start pre_core
 
