SWANDROID-1538: [L] Provide a generic means of setting GPIO outputs for different power states
Enhanced the "NexusGpio" class to allow GPIO/AON_GPIO/AON_SGPIO output pins to be
set to open-drain or push-pull outputs and the level/value on them to be set per
power state.  The configuration can be setup using the "aon_gpio.cfg" file that is
located in the "/vendor/power/" rootfs.

NOTE: The aon_gpio.cfg file format has changed.  Please refer to the comments in
      the header of this file for information about how to correctly setup the
      pin as an input or output.

Fixed seg fault if 4 AON_GPIO instances were created.

Increased the max number of GPIO/AON_GPIO/AON_SGPIO instances from 4 to 8.

Cleaned up the code to remove unneeded arguments and to make methods private
where ever possible.

refs #SWANDROID-1538

Change-Id: Ie3bbc98782304a6a856c4b27b2939adbdd743720

--- a/bcm_platform/libpower/aon_gpio.cfg
+++ b/bcm_platform/libpower/aon_gpio.cfg
@@ -1,8 +1,62 @@
-# This is an example AON GPIO/SGPIO configuration file
+##################################################################################################
+# This is an example GPIO/AON_GPIO/AON_SGPIO configuration file and is made up of key/value pairs
+# for the GPIO/SGPIO's.  This comprises the name of the GPIO/SGPIO followed by an "=" and
+# additional parameters separated by comma(s) and *NO* whitespace within the square brackets.
+# The parameters are used to inform the software how to configure the GPIO.
+# The first parameter is the "GPIO pin mode" of the pin. The valid values are:
+#
+#  1) "Input"     --> an input pin
+#  2) "PushPull"  --> a totem-pole output
+#  3) "OpenDrain" --> an open-drain output
+#
+# The second and subsequent parameters depends on whether the GPIO is configurred as an "input"
+# or "output".
+#
+# If the pin is configured as an input, then the second (and final) parameter is used to indicate
+# the type of "interrupt mode".  The valid value are:
+#
+#  1) Disabled    --> no interrupt will be generated.
+#  2) RisingEdge  --> an interrupt will be generated on a rising edge  (i.e. low-->high).
+#  3) FallingEdge --> an interrupt will be generated on a falling edge (i.e. high-->low).
+#  4) Edge        --> an interrupt will be generated on either a rising or falling edge.
+#  5) High        --> an interrupt will be generated on a high level.
+#  6) Low         --> an interrupt will be generated on a low level.
+#
+# If the pin is configurred as an output, then the following 6 (and only 6) parameters are used
+# to indicate the polarity of the output signal in power states S0 through to S5 (note S4 is not
+# used at this current time).  The valid values are:
+#
+#  1) High
+#  2) Low
+#
+# Below are some examples of both input and output GPIO configurations.
+#
+#  Example1: GPIO101 = [PushPull,High,High,Low,Low,Low,High]
+#            So this configures GPIO_101 as a totem-pole output which is driven HIGH during S0,
+#            LOW during states S1 to S4 and HIGH again for state S5
+#
+#  Example2: AON_GPIO01 = [Input,FallingEdge]
+#            This configures AON_GPIO_01 as a negative edge triggered input
+#
+#  Example3: AON_SGPIO02 = [Input,Edge]
+#            this configures AON_SGPIO_02 as any edge triggered input
+#
+#  Example4: AON_GPIO00 = [PushPull,High,High,Low,Low,Low,Low]
+#            So this configures AON_GPIO_00 as a totem-pole output which is driven HIGH during S0
+#            and S1 states and LOW in the other standby states S2 to S5.
+#
+#  Example5: AON_GPIO03 = [OpenDrain,Low,High,High,High,High,High]
+#            So this configures AON_GPIO_03 as an open-drain output which is driven LOW during S0
+#            and HIGH in all other standby states S1 to S5.
+#
+##################################################################################################
 
 # Configure AON_GPIO #2 as falling/negative edge interrupt triggered
-#AON_GPIO02 = FallingEdge
+#AON_GPIO02 = [Input,FallingEdge]
 
 # Configure AON_SGPIO #0 with interrupts disabled
 #AON_SGPIO00 = Disabled
+
+# Configure AON_GPIO #0 as an OpenDrain output which is HIGH when in states S0 and S1 and LOW in states S2 to S5
+#AON_GPIO00 = [OpenDrain,High,High,Low,Low,Low,Low]
 
