--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -71,6 +71,7 @@ on post-fs-data
    mkdir /data/media 0770 media_rw media_rw
    mkdir /data/misc/moca 0777 system system
    mkdir /data/nexus 0775 root system
+   mkdir /data/misc/nexus 0755 root system
 
    class_start pre_core
 
