Allow Launcher wallpaper picker to use landscape mode
Fixing incorrect orientation in Wallpaper picker.

refs #SWANDROID-1506

Change-Id: I2ec361784a773c9a5884ce4c722c792887817861
Signed-off-by: Andrei Narkevitch <andrey@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -64,6 +64,8 @@ on post-fs
 
    # Eliminate writable file in /sys to pass android.permission CTS
    chmod 0664 /sys/kernel/wakeup_reasons/last_resume_reason
+   # Allow Launcher wallpaper picker to use landscape mode
+   setprop log.tag.launcher_force_rotate VERBOSE
 
 on post-fs-data
    mkdir /data/media 0770 media_rw media_rw
