--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -12,3 +12,5 @@
 /dev/mali0                0666   root       root
 /dev/ion                  0666   root       root
 
+# Persistent data block
+/dev/block/platform/f0471000.xhci/by-name/pst 0600 system system
