uevent: adding sw_sync node.
refs #SWANDROID-494

Change-Id: I9843752c2e782c7f491bc490a9f4527f76344a3e
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -7,6 +7,8 @@
 # BT USB device nodes
 /dev/btusb0               0660   bluetooth  bluetooth
 
+/dev/sw_sync              0666   system     system
+
 # nexus in disguise...
 /dev/mali                 0666   root       root
 /dev/mali0                0666   root       root
