trusted nxclient: swap nxserver option from 'trusted' to 'password'.
update option used to avoid showing password in clear to the 'ps'
state.  the password needs to be seeded via an external process
into the expected location (since that location is 'fixed' under
selinux policy control).

refs #SW7445-2261

Change-Id: Ie9336a1ba6c61161ab41b9086cd6935a5e46a8eb
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -73,6 +73,14 @@ on post-fs-data
    mkdir /data/nexus 0775 root system
    mkdir /data/misc/nexus 0755 root system
 
+   # *** sample only.
+   #
+   #    seed the nx_key with some password to allow
+   #    server/client authentication, note the syntax
+   #    of the key-file content: 'trusted:<some-password>'
+   #
+   write /data/misc/nexus/nx_key trusted:test-passwd
+
    class_start pre_core
 
 on property:hw.nexus.platforminit=on
@@ -110,3 +118,4 @@ service hwcbinder /system/bin/hwcbinder
    group system media
    critical
    oneshot
+
