bt: fix group of /dev/btusb0 device node
The group of /dev/btusb0 should be net_bt_stack to allow
different user profiles to access the bluetooth device.

refs #SWANDROID-1666

Change-Id: I64d67bc1e67a0911bca2ba453ce1e1598ee079ab
Signed-off-by: Edwin Chan <echan@broadcom.com>

--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -5,7 +5,7 @@
 /dev/mem                  0770   root       root
 
 # BT USB device nodes
-/dev/btusb0               0660   bluetooth  bluetooth
+/dev/btusb0               0660   bluetooth  net_bt_stack
 
 /dev/sw_sync              0660   system     system
 
