--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 refsw/
+
+# copied by build.
+bcm_platform/brcm_nexus/bin/
+bcm_platform/libGLES_nexus/bin/
+bcm_platform/brcm_btusb/driver/btusb.ko
+bcm_platform/brcm_dhd/driver/bcmdhd.ko
+bcm_platform/brcm_dhd/firmware/fw.bin.trx
+bcm_platform/brcm_dhd/nvrams/nvm.txt
+bcm_platform/brcm_dhd/tools/dhd
+bcm_platform/brcm_dhd/tools/wl
+
+# separate repo.
+drivers/bcmdhd/
+drivers/btusb/
+drivers/connectivity/
+
