BcmTVInput: Added track change notify, track select notify, track select
refs #SWANDROID-1361

Change-Id: Ic50b9676cc8a7fba5fdf4db91456a4ad65d8d3b5

--- a/bcm_platform/app/BcmTVInput/proguard.cfg
+++ b/bcm_platform/app/BcmTVInput/proguard.cfg
@@ -1,5 +1,5 @@
 -keep class com.broadcom.tvinput.ChannelInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ProgramInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ScanInfo { <init>(...); }
--keep class com.broadcom.tvinput.VideoTrackInfo { <init>(...); }
+-keep class com.broadcom.tvinput.TrackInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TunerService { void onBroadcastEvent(...); }
