--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -7,6 +7,8 @@ import /init.nfs.rc
 import /init.blockdev.rc
 
 on init
+   mkdir /mnt/hwcfg 0555 root root
+
    mkdir /mnt/shell/emulated 0700 shell shell
    mkdir /storage/emulated 0555 root root
 
@@ -72,6 +74,8 @@ on post-fs-data
    mkdir /data/misc/moca 0777 system system
    mkdir /data/nexus 0775 root system
    mkdir /data/misc/nexus 0755 root system
+
+   mkdir /data/mediadrm/playready/ 0770 mediadrm mediadrm
 
    # *** sample only.
    #
