Use Java values for broadcast events in JNI.
Avoid using hard-coded constatns and don't define the same values
in Java and in C as they will get out of sync sooner or later.

Use switch and enum instead of if-else for handling events.
This way a missing event handler is reported as a compilation warning.

refs #SWANDROID-1758

Change-Id: I3dc5e0543ba8fa649191cdda4793d15c2cab22c1
Signed-off-by: Tomek Bury <tomek@broadcom.com>

--- a/bcm_platform/app/BcmTVInput/proguard.cfg
+++ b/bcm_platform/app/BcmTVInput/proguard.cfg
@@ -3,3 +3,7 @@
 -keep class com.broadcom.tvinput.ScanInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TrackInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TunerService { void onBroadcastEvent(...); }
+-keep class com.broadcom.tvinput.TunerService$BroadcastEvent {
+    **[] $VALUES;
+    public *;
+}
