BcmTVInput: Infrastructure for new EPG Update procedure
refs #SWANDROID-1361

Change-Id: Ifa88f8ddd44751d4757f4a2fc3c8ab76a22b9591

--- a/bcm_platform/app/BcmTVInput/proguard.cfg
+++ b/bcm_platform/app/BcmTVInput/proguard.cfg
@@ -1,5 +1,6 @@
 -keep class com.broadcom.tvinput.ChannelInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ProgramInfo { <init>(...); }
+-keep class com.broadcom.tvinput.ProgramUpdateInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ScanInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TrackInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TunerService { void onBroadcastEvent(...); }
