--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -5,6 +5,7 @@ import /init.brcm_wl.rc
 import /init.brcm_bt.rc
 import /init.nfs.rc
 import /init.blockdev.rc
+import /init.eth.rc
 
 on init
    mkdir /mnt/hwcfg 0555 root root
@@ -97,12 +98,6 @@ service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emul
 service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
    class late_start
    disabled
-
-service dhcpcd_gphy /system/bin/dhcpcd -dABKL
-   class main
-   group dhcp
-   disabled
-   oneshot
 
 service bcmsetup /system/bin/nexusinit
    class core
