Integrate DTVKit build into Android build system.
The DTVKit build is disabled by default and source files necessary to
build it are not present. In order to enable it 2 things must be done:

1. Set ANDROID_SUPPORTS_DTVKIT := y
(see device/broadcom/common/settings.mk)

2. Create .repo/local_manifests/dtvkit.xml with following contents:

<manifest>
    <remote  name="bcghost-bri" fetch="ssh://stb-brsa-02.bri.broadcom.com:29418" review="http://stb-brsa-02.bri.broadcom.com:8080/" />
    <project name="InternalUseOnlyDVBCore" path="external/DVBCore" remote="bcghost-bri" revision="master" />
    <project name="DTVKitPlatform" path="vendor/broadcom/bcm_platform/DTVKitPlatform" remote="bcghost-bri" revision="master" />
</manifest>

refs #SWANDROID-1812

Change-Id: Ie75f7c3b7959ad0d19d8fa03b385f1583e17e88e
Signed-off-by: Tomek Bury <tomek@broadcom.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ bcm_platform/brcm_dhd/tools/dhd
 bcm_platform/brcm_dhd/tools/wl
 
 # separate repo.
+bcm_platform/DTVKitPlatform/
 drivers/bcmdhd/
 drivers/btusb/
 drivers/connectivity/
