nexusinit: rework for nxserver startup update.
move insmod'ing into the init seqeuence since one can
do it from there just as well, removes non necessary
calls.

no functional change (yet).

refs #SWANDROID-1723

Change-Id: Ib8a9a29f63d90c880e15e988e8aa13b85c664795
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -46,6 +46,18 @@ on fs
    setprop ro.nexus.ashmem.devname ion
 
 on boot
+   # install wakeup.ko first, then nexus.ko.  any other drivers
+   # depending on nexus.ko need to be insmod'ed through the property
+   # hook up (see: on property:hw.nexus.platforminit) after the
+   # nxserver has started (since only then is a nexus platform valid).
+   #
+   # optional additional module parameters can be passed to nexus.ko
+   # insmod'ing command line. in particular: 'msg_modules=xxx,yyy,zzz'
+   # for debugging purposes.
+   #
+   insmod /system/vendor/drivers/wakeup_drv.ko devname="mali0"
+   insmod /system/vendor/drivers/nexus.ko devname="mali"
+
    # Subsytem Ramdump collection
    mkdir /data/tombstones 0777 system system
    mkdir /data/tombstones/ramdump 0777 system system
@@ -90,6 +102,8 @@ on post-fs-data
    class_start pre_core
 
 on property:hw.nexus.platforminit=on
+   # insmod nx_ashmem driver (gralloc memory support).
+   insmod /system/vendor/drivers/nx_ashmem.ko devname="ion"
    class_start main
 
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
