--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -3,6 +3,7 @@ import /init.bcm_platform.usb.rc
 import /init.brcm_dhd.rc
 import /init.brcm_wl.rc
 import /init.brcm_bt.rc
+import /init.brcm_hwmon.rc
 import /init.nfs.rc
 import /init.blockdev.rc
 import /init.eth.rc
