--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -114,7 +114,7 @@ service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw
    class late_start
    disabled
 
-service bcmsetup /system/bin/nexusinit
+service nxserver /system/bin/nxserver
    class core
    user root
    group system
