--- a/bcm_platform/app/BcmTVInput/proguard.cfg
+++ b/bcm_platform/app/BcmTVInput/proguard.cfg
@@ -1,6 +1,7 @@
 -keep class com.broadcom.tvinput.ChannelInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ProgramInfo { <init>(...); }
 -keep class com.broadcom.tvinput.ProgramUpdateInfo { <init>(...); }
+-keep class com.broadcom.tvinput.ScanParams { <init>(...); }
 -keep class com.broadcom.tvinput.ScanInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TrackInfo { <init>(...); }
 -keep class com.broadcom.tvinput.TunerService { void onBroadcastEvent(...); }
