--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -53,8 +53,8 @@ on boot
    # nxserver has started (since only then is a nexus platform valid).
    #
    # optional additional module parameters can be passed to nexus.ko
-   # insmod'ing command line. in particular: 'msg_modules=xxx,yyy,zzz'
-   # for debugging purposes.
+   # insmod'ing command line. in particular, for nexus logging purposes:
+   # 'config="msg_modules=xxx,yyy,zzz"'
    #
    insmod /system/vendor/drivers/wakeup_drv.ko devname="mali0"
    insmod /system/vendor/drivers/nexus.ko devname="mali"
