gralloc: fix up unlocking handle, log.
refs #SWANDROID-1861

Change-Id: Ibb8bf8220e0c2742de8ffb3340882fbacb230c83
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -56,7 +56,7 @@ on boot
    # 'config="msg_modules=xxx,yyy,zzz"'
    #
    insmod /system/vendor/drivers/wakeup_drv.ko devname="mali0"
-   insmod /system/vendor/drivers/nexus.ko devname="mali" config="msg_modules=nexus_platform_os,nexus_platform_settings"
+   insmod /system/vendor/drivers/nexus.ko devname="mali"
 
    # Subsytem Ramdump collection
    mkdir /data/tombstones 0777 system system
