Adding android logger process separate from nexus
Previously the android logging was done with #ifdef B_REFSW_ANDROID in
nexus/utils/logger.  This moves the logger task into the android tree
so we can add any options we want and avoid having unnecessary
android compile-time checks in refsw.

refs #SWANDROID-2018

Change-Id: Id8a95069d2348f19ef8c5db767d00a31481c2aa7

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -73,6 +73,8 @@ on post-fs
    export nexus_ipc_dir /dev
 
    export SAGEBIN_PATH /system/bin
+   export NEXUS_LOGGER /system/bin/nxlogger
+   export NEXUS_LOGGER_FILE /data/nexus/nexus.log
 
    setprop ro.nexus.nxserver.hdcp1x_keys /system/bin/drm_hdcp1x.bin
    setprop ro.nexus.nxserver.hdcp2x_keys /mnt/hwcfg/drm.bin
