--- a/bcm_platform/prebuilt/init.nx.dynheap.rc
+++ b/bcm_platform/prebuilt/init.nx.dynheap.rc
@@ -5,14 +5,24 @@ on boot
    # nxserver has started (since only then is a nexus platform valid).
    #
    # optional additional module parameters can be passed to nexus.ko
-   # insmod'ing command line. in particular, for nexus logging purposes:
-   # 'config="msg_modules=xxx,yyy,zzz"'
+   # insmod'ing command line.
    #
    # the config parameter has a maximum total length of 256 characters
    # and accepts a set of <key>=<value> pairs separated by either of
    # (whitespace, colon, semi-colon).
    #
+   # for nexus logging:
+   #
+   # 1) specify 'config="msg_modules=xxx,yyy,zzz"' as an argument to
+   #    the server side insmod to trigger server logs setup.
+   #
+   # 2) specify 'aaa,bbb,ccc' to the setprop action to trigger client
+   #    logs setup.
+   #
+   # in doubt, or if unsure, you may specify the same value for 1 and 2.
+   #
    insmod /system/vendor/drivers/wakeup_drv.ko devname="mali0"
+   setprop ro.nx.msg_modules ""
    insmod /system/vendor/drivers/nexus.ko devname="mali" config="auto_subindex=true"
 
 
