SWANDROID-2084: [PM] Create an S0.5 standby state to only disconnect the HDMI output
Part 1 of 2 changes:
===================
S0.5 is not an official state but a "half-way house" state between S0 and S1.  It
allows the CPU and Nexus to be kept "running" but disconnects the HDMI output.  It
also places the CEC in a state whereby it can react to wake-up CEC messages from the
TV.

With this fix, it is now possible to have applications crash/terminate and restart
whilst in S0.5 without the system deadlocking (please see SWANDROID-1083) top-level
parent issue for more information about the other relevant changes needed.

refs #SWANDROID-2084

Change-Id: I29e4703b3b8ff1dcb34393d8bae88ce9c31eb45c

--- a/bcm_platform/libpower/aon_gpio.cfg
+++ b/bcm_platform/libpower/aon_gpio.cfg
@@ -31,9 +31,9 @@
 #
 # Below are some examples of both input and output GPIO configurations.
 #
-#  Example1: GPIO101 = [PushPull,High,High,Low,Low,Low,High]
+#  Example1: GPIO101 = [PushPull,High,Low,Low,Low,Low,Low,High]
 #            So this configures GPIO_101 as a totem-pole output which is driven HIGH during S0,
-#            LOW during states S1 to S4 and HIGH again for state S5
+#            LOW during states S0.5 to S4 and HIGH again for state S5
 #
 #  Example2: AON_GPIO01 = [Input,FallingEdge]
 #            This configures AON_GPIO_01 as a negative edge triggered input
@@ -41,13 +41,13 @@
 #  Example3: AON_SGPIO02 = [Input,Edge]
 #            this configures AON_SGPIO_02 as any edge triggered input
 #
-#  Example4: AON_GPIO00 = [PushPull,High,High,Low,Low,Low,Low]
+#  Example4: AON_GPIO00 = [PushPull,High,High,Low,Low,Low,Low,Low]
 #            So this configures AON_GPIO_00 as a totem-pole output which is driven HIGH during S0
-#            and S1 states and LOW in the other standby states S2 to S5.
+#            and S0.5 states and LOW in the other standby states S1 to S5.
 #
-#  Example5: AON_GPIO03 = [OpenDrain,Low,High,High,High,High,High]
+#  Example5: AON_GPIO03 = [OpenDrain,Low,High,High,High,High,High,High]
 #            So this configures AON_GPIO_03 as an open-drain output which is driven LOW during S0
-#            and HIGH in all other standby states S1 to S5.
+#            and HIGH in all other standby states S0.5 to S5.
 #
 ##################################################################################################
 
@@ -57,6 +57,6 @@
 # Configure AON_SGPIO #0 with interrupts disabled
 #AON_SGPIO00 = Disabled
 
-# Configure AON_GPIO #0 as an OpenDrain output which is HIGH when in states S0 and S1 and LOW in states S2 to S5
-#AON_GPIO00 = [OpenDrain,High,High,Low,Low,Low,Low]
+# Configure AON_GPIO #0 as an OpenDrain output which is HIGH when in states S0, S0.5 and S1 and LOW in states S2 to S5
+#AON_GPIO00 = [OpenDrain,High,High,High,Low,Low,Low,Low]
 
