--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -17,6 +17,9 @@ on init
    mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
    mkdir /storage/sdcard1 0700 root root
 
+   mkdir /mnt/media_rw/usb0 0700 media_rw media_rw
+   mkdir /storage/usb0 0700 root root
+
    export EXTERNAL_STORAGE /storage/emulated/legacy
    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
    export EMULATED_STORAGE_TARGET /storage/emulated
@@ -101,6 +104,10 @@ service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emul
    class late_start
 
 service fuse_sdcard1 /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/sdcard1 /storage/sdcard1
+   class late_start
+   disabled
+
+service fuse_usb0 /system/bin/sdcard -u 1023 -g 1023 -w 1023 -d /mnt/media_rw/usb0 /storage/usb0
    class late_start
    disabled
 
