eth: Move ethernet changes to init.eth.rc
Moved gphy specific changes to init.eth.rc as we are getting cts
failures without ipv6 on eth0.

refs #SWANDROID-2156

Change-Id: Ib6574d5154fd89c9aa5ab2c9cde7c9c7fd5d2b75

--- a/bcm_platform/prebuilt/init.eth.rc
+++ b/bcm_platform/prebuilt/init.eth.rc
@@ -1,3 +1,11 @@
+on init
+   # Do not let SYSTEMPORT get an IPv6 address (when using gphy)
+   write /proc/sys/net/ipv6/conf/eth0/disable_ipv6 1
+
+on boot
+   # gphy depends on eth0 being up
+   ifup eth0
+
 service dhcpcd_gphy /system/bin/dhcpcd -dABKL
    class main
    group dhcp
