nxserver: lmk hook up - adding monitoring/gathering.
this is the first step for the lmk hookup, need to
gather the information we will be triggering potential
kill on.

next step would be sorting and selecting.

refs #SWANDROID-1861

--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -8,6 +8,7 @@
 /dev/btusb0               0660   bluetooth  net_bt_stack
 
 /dev/sw_sync              0660   system     system
+/dev/brcm_lmk             0660   system     system
 
 # nexus in disguise...
 /dev/mali                 0666   root       root
