--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -86,6 +86,7 @@ on post-fs-data
    #
    write /data/misc/nexus/nx_key trusted:test-passwd
    chmod 0644 /data/misc/nexus/nx_key
+   export NXCLIENT_PASSWORD /data/misc/nexus/nx_key
 
    class_start pre_core
 
