bmemconfig: add android port.
move 'bmemperf' and 'bmemconfig' under the same subtree 'bmem'.

refs #SWANDROID-2346

Change-Id: I6bcbda7f9dd836511bc6ce0c9276cee48b0850b6
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/tools/bmem/prebuilt/boa.conf
+++ b/bcm_platform/tools/bmem/prebuilt/boa.conf
@@ -72,7 +72,7 @@ User root
 #  process if the receiving end of a pipe stops reading."
 #ErrorLog "|/usr/sbin/cronolog --symlink=/var/log/boa/error_log /var/log/boa/error-%Y%m%d.log"
 
-ErrorLog /data/nexus/bmemperf/boa_error.log
+ErrorLog /data/nexus/bmem/boa_error.log
 
 # AccessLog: The location of the access log file. If this does not
 # start with /, it is considered relative to the server root.
@@ -85,7 +85,7 @@ ErrorLog /data/nexus/bmemperf/boa_error.log
 #  process if the receiving end of a pipe stops reading."
 #AccessLog  "|/usr/sbin/cronolog --symlink=/var/log/boa/access_log /var/log/boa/access-%Y%m%d.log"
 
-AccessLog /data/nexus/bmemperf/boa_access.log
+AccessLog /data/nexus/bmem/boa_access.log
 
 # CGILog /var/log/boa/cgi_log
 # CGILog: The location of the CGI stderr log file. If this does not
@@ -157,7 +157,7 @@ ServerName boa97445
 # Comment out to disable server non user files.
 
 ### DocumentRoot /etc/boa
-DocumentRoot /data/nexus/bmemperf/
+DocumentRoot /data/nexus/bmem/
 
 # UserDir: The name of the directory which is appended onto a user's home
 # directory if a ~user request is received.
@@ -247,5 +247,5 @@ Alias /doc /usr/doc
 # Example: ScriptAlias /htbin/ /www/htbin/
 
 #ScriptAlias /cgi/  /var/www/cgi/
-ScriptAlias /cgi/  /data/nexus/bmemperf/
+ScriptAlias /cgi/  /data/nexus/bmem/
 #  /cgi-bin/ /usr/lib/cgi-bin/
