odv/vc5: allowing on-demand locking (bis).
rename configuration parameter to use android property,
requires a v3d driver update.

refs #SWANDROID-2346

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -62,7 +62,7 @@ on post-fs
    export NEXUS_LOGGER /system/bin/nxlogger
    export NEXUS_LOGGER_FILE /data/nexus/nexus.log
 
-   export V3D_DISABLE_MAP_LOCK_OPT 1
+   setprop ro.nx.v3d.no_map_lock 1
 
    setprop ro.nexus.nxserver.hdcp1x_keys /mnt/hwcfg/drm_hdcp1x.bin
    setprop ro.nexus.nxserver.hdcp2x_keys /mnt/hwcfg/drm.bin
