--- a/bcm_platform/app/BcmUriPlayer/AndroidManifest.xml
+++ b/bcm_platform/app/BcmUriPlayer/AndroidManifest.xml
@@ -3,12 +3,15 @@
       package="com.broadcom.BcmUriPlayer"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon"
+                 android:banner="@drawable/banner"
+                 android:label="@string/app_name">
         <activity android:name=".BcmUriPlayer"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
 
