--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -64,7 +64,7 @@ on post-fs
 
    export V3D_DISABLE_MAP_LOCK_OPT 1
 
-   setprop ro.nexus.nxserver.hdcp1x_keys /system/bin/drm_hdcp1x.bin
+   setprop ro.nexus.nxserver.hdcp1x_keys /mnt/hwcfg/drm_hdcp1x.bin
    setprop ro.nexus.nxserver.hdcp2x_keys /mnt/hwcfg/drm.bin
 
    # Eliminate writable file in /sys to pass android.permission CTS
