BT: add BT UART interface support
refs #SWANDROID-2219

Change-Id: Id3f6f1d04c6a8e685fd1e4f7b44e4de156788de1
Signed-off-by: Charley Chu <charley.chu@broadcom.com>

--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -7,6 +7,9 @@
 # BT USB device nodes
 /dev/btusb0               0660   bluetooth  net_bt_stack
 
+#BT UART device nodes
+/dev/ttyS1                0660   bluetooth  net_bt_stack
+
 /dev/sw_sync              0660   system     system
 /dev/brcm_lmk             0660   system     system
 
