prebuilt: update init-rc file to get adb-over-usb to work
Removed all references to '/sys/class/android_usb/android0/*' because we use
the FunctionFS USB gadget driver that comes with stock kernel instead of the
Android USB gadget.

This commit also removed settings the 'adb.port.port' settings to use
adb-over-usb by default instead of using adb-over-tcp.

Platforms that must use adb-over-tcp will have to define an override variable
in pre_settings.mk such that the 'init.broadcomstb.usb.tcp.rc' file will be
used instead. Without setting the service.adb.tcp.port in the
init-rc file, we cannot run CTS with 'user' image on these platforms.

refs #SWANDROID-2466

Change-Id: I5068118f4dceeef868d51111eb9bdc5879180902
Signed-off-by: Wendy Ng <wendy.ng@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.usb.tcp.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.usb.tcp.rc
@@ -6,10 +6,12 @@ on fs
 # Used to disable USB when switching states
 on property:sys.usb.config=none
     stop adbd
+    setprop service.adb.tcp.port -1
     setprop sys.usb.state ${sys.usb.config}
 
 # adb only
 on property:sys.usb.config=adb
+    setprop service.adb.tcp.port 5555
     start adbd
     setprop sys.usb.state ${sys.usb.config}
 
