--- a/bcm_platform/app/BcmTvSettingsLauncher/AndroidManifest.xml
+++ b/bcm_platform/app/BcmTvSettingsLauncher/AndroidManifest.xml
@@ -15,6 +15,16 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.settings.ACCESSIBILITY_SETTINGS" />
+                <action android:name="android.settings.USER_DICTIONARY_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.EDIT" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="vnd.android.cursor.item/event" />
+            </intent-filter>
         </activity>
     </application>
 
