nxdispfmt: simple service to auto-set video output resolution.
in order to satisfy customer demand, create a simple service to
illustrate how one can dynamically control video output format
without need to restart/hotplug the device.

this application/example uses a property based service trigger
to change the resolution if warranted.

to trigger: "setprop dyn.nx.video.set 1" from command line, the
application will look for (in order) - 1) 'persist.nx.vidout.force',
or 2) 'ro.nx.vidout.force', or 3) 'dyn.nx.vidout.force' - to determine
the video format to attempt setting, use the latter to test things
out without making it permanent in any way.

refs #SWANDROID-2267

Change-Id: Ib5bfcdd03537204f93be32fa51a8b1c01c598d36
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -97,6 +97,9 @@ on property:hw.nexus.platforminit=on
    insmod /system/vendor/drivers/nx_ashmem.ko devname="ion" heap_grow="8m"
    class_start main
 
+on property:dyn.nx.vidout.set=1
+   start nxdispfmt
+
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
    class late_start
 
@@ -127,4 +130,9 @@ service hwcbinder /system/bin/hwcbinder
    group system media
    critical
    oneshot
+
+service nxdispfmt /system/bin/nxdispfmt
+   class late_start
+   oneshot
+   disabled
 
