vendor: remove the default nexus heap assignment path - use dynamic.
refs #SWANDROID-2587

Change-Id: I429d948d4490a3e993dbdb20a010475e6b18c668
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -6,7 +6,7 @@ import /init.brcm_hwmon.rc
 import /init.nfs.rc
 import /init.blockdev.rc
 import /init.eth.rc
-import /init.nx.${ro.nx.boot.mode}.rc
+import /init.nx.dynheap.rc
 
 on init
    mkdir /mnt/hwcfg 0555 root root
