--- a/bcm_platform/prebuilt/init.nx.dynheap.rc
+++ b/bcm_platform/prebuilt/init.nx.dynheap.rc
@@ -8,10 +8,10 @@ on boot
    # insmod'ing command line.
    #
    # the config parameter has a maximum total length of 256 characters
-   # and accepts a set of <key>=<value> pairs separated by either of
-   # (whitespace, colon, semi-colon).
+   # and accepts a set of '<key>=<value>' pairs separated by a semi-colon.
    #
-   # for nexus logging:
+   #
+   # in particular, for nexus logging:
    #
    # 1) specify 'config="msg_modules=xxx,yyy,zzz"' as an argument to
    #    the server side insmod to trigger server logs setup.
