wifi: add check for pcie secdma feature
Moved insmod dhd.ko to after nexus is up.
Allocate secure memory and insmod wifi device driver from nxserver with size and address if the secdma size property is set.
DHD secdma build is enabled by exporting ANDROID_ENABLE_DHD_SECDMA=y.
The wifi PCIe secure DMA feature is enabled by setting ro.dhd.secdma to size of the buffer.
The recommended buffer size is 17498112.
Set ro.dhd.secdma to 0 to disable.
Both ANDROID_ENABLE_DHD_SECDMA and ro.dhd.secdma settings must match.
The path to stbpriv.txt must match with the path in the driver.
Free previously allocated memory in nxserver.

refs #SWANDROID-2426

Change-Id: I2402adeceb753a7030a0fd20a508f39cbc4c6e57

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -75,6 +75,8 @@ on post-fs-data
 
    mkdir /data/mediadrm/playready/ 0770 mediadrm mediadrm
 
+   mkdir /data/nexus/secdma 0777 system system
+
    # *** sample only.
    #
    #    seed the nx_key with some password to allow
