--- a/bcm_platform/prebuilt/init.blockdev.rc
+++ b/bcm_platform/prebuilt/init.blockdev.rc
@@ -1,2 +1,2 @@
 on init
-   symlink /dev/block/platform/f0471000.xhci/by-name /dev/block/by-name
+   symlink /dev/block/platform/rdb.4/by-name /dev/block/by-name
