platform: fully qualify platform device name.
this was updated on LTOT following kernel change, but now for M
we need to restore the per platform once again... sigh.

refs #SWANDROID-2362

Change-Id: If77078ec1d102a8ed4a8a4bfff652c1d71d64ed3
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.blockdev.rc
+++ b/bcm_platform/prebuilt/init.blockdev.rc
@@ -1,2 +1,2 @@
 on init
-   symlink /dev/block/platform/rdb.4/by-name /dev/block/by-name
+   symlink /dev/block/platform/rdb.4/f0471000.xhci_v2/by-name /dev/block/by-name
