--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -69,6 +69,7 @@ on post-fs
 
 on post-fs-data
    mkdir /data/media 0770 media_rw media_rw
+   mkdir /data/nxmedia 0770 media media
    mkdir /data/nexus 0775 root system
    mkdir /data/misc/nexus 0755 root system
 
