btusb: add FW name in BT config file
refs #SWANDROID-2725

Change-Id: I2b10ca0cfb838435fee96ec1b54768ac9020fe6f
Signed-off-by: Charley Chu <charley.chu@broadcom.com>

--- a/bcm_platform/brcm_btusb/bt_vendor.conf
+++ b/bcm_platform/brcm_btusb/bt_vendor.conf
@@ -2,4 +2,5 @@
 UartPort = /dev/btusb0
 # Firmware patch file location
 FwPatchFilePath = /vendor/broadcom/btusb/firmware
+FwPatchFileName = BCM_bt_fw.hcd
 
