drivers: move to a dedicated repo, starting in M.
refs #SWANDROID-2986

Change-Id: I50c62c5fba06e6369d731be7a92dd010ef5ba38e
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-refsw/
-bolt/
-bcmdvb/
-
 # copied by build.
 bcm_platform/brcm_nexus/bin/
 bcm_platform/libGLES_nexus/bin/
@@ -14,8 +10,7 @@ bcm_platform/brcm_dhd/tools/wl
 
 # separate repo.
 bcm_platform/DTVKitPlatform/
-drivers/bcmdhd/
-drivers/btusb/
-drivers/connectivity/
-drivers/gator/
-
+refsw/
+bolt/
+bcmdvb/
+drivers/
